# cv-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  main.py  routes.py
app/auth/: manager.py  schema.py  service.py  utils.py  views.py
app/cv/: manager.py  models.py  schema.py  service.py  utils.py  views.py
app/cv/project/: schema.py  service.py  views.py
app/database/: core.py
app/user/: manager.py  models.py  schema.py  service.py  views.py
locust/: main.py
tests/: conftest.py  constants.py
tests/auth/: test_auth.py  test_auth_manager.py
tests/cv/: test_cv.py  test_cv_project.py
tests/factories/: cv.py  user.py
tests/user/: test_user.py
